--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
                 <div class="project-card-back">
                     <span class="project-date">Nov 2025 - Present</span>
-                    <h3 class="project-title">Forensic Analyzer</h3>
+                    <h3 class="project-title">Forensic Analyzer.</h3>
                     <p class="project-desc">A web-based Digital Forensic Learning Tool. Implemented basic hashing and encoding features for educational analysis. (Academic Project)</p>
                     <div class="project-tech">PYTHON // WEB // HASHING</div>
                 </div>
@@ -548,7 +548,7 @@
 
                 <div class="project-card-front">
                     <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool Launcher (CMTL)</h3>
+                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool Launcher (CMTL).</h3>
                     <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
                         GUI platform for VAPT, Pen Testing, and Network Scanning.
                     </p>
@@ -576,7 +576,7 @@
 
                 <div class="project-card-front">
                     <img src="project3.png" alt="AI Phishing Detector" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI-Powered Phishing Email Detector</h3>
+                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI-Powered Phishing Email Detector.</h3>
                     <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
                         Detects phishing emails using AI analysis of headers and content.
                     </p>
@@ -602,85 +602,174 @@
 </section>
 
 
-    <!-- NEW CERTIFICATIONS SECTION -->
-    <section id="credentials" class="hidden">
-        <h2 class="section-title hyper-text">CREDENTIALS</h2>
-        <div class="cert-container">
-            <div class="cert-track">
-                <!-- Set 1 -->
-                <div class="cert-card" onclick="openCert('CEH V13ai Certified', 'EC-Council', 'Certified Ethical Hacker. Advanced penetration testing and ethical hacking methodologies.')">
-                    <div class="cert-icon">🔐</div>
-                    <div>
-                        <div class="cert-name">CEH V13ai</div>
-                        <div class="cert-issuer">EC-Council</div>
-                    </div>
-                    <div class="cert-status">VERIFIED</div>
-                </div>
+   <!-- UPDATED CERTIFICATIONS SECTION -->
+<section id="credentials" class="hidden">
+    <h2 class="section-title hyper-text">CREDENTIALS</h2>
+    <div class="cert-container">
+        <div class="cert-track">
 
-                <div class="cert-card" onclick="openCert('CHFI Investigator', 'Pursuing', 'Computer Hacking Forensic Investigator. Deep dive into forensic tools and evidence handling.')">
-                    <div class="cert-icon">🕵️‍♀️</div>
-                    <div>
-                        <div class="cert-name">CHFI</div>
-                        <div class="cert-issuer">Pursuing</div>
-                    </div>
-                    <div class="cert-status" style="color:var(--terminal-amber)">IN PROGRESS</div>
+            <!-- 1. CCEP -->
+            <div class="cert-card" onclick="openCert('CCEP', 'Organization Name', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="CCEP certificate.jpg" alt="CCEP Certificate" style="width:40px;height:40px;object-fit:cover;">
                 </div>
-
-                <div class="cert-card" onclick="openCert('Cyber Job Sim', 'Deloitte Australia', 'Completed practical simulation tasks involving malware analysis and threat assessment.')">
-                    <div class="cert-icon">💼</div>
-                    <div>
-                        <div class="cert-name">Deloitte Cyber Sim</div>
-                        <div class="cert-issuer">Forage</div>
-                    </div>
-                    <div class="cert-status">COMPLETED</div>
+                <div>
+                    <div class="cert-name">CCEP</div>
+                    <div class="cert-issuer">Organization Name</div>
                 </div>
-
-                <div class="cert-card" onclick="openCert('Cybersecurity Job Sim', 'Mastercard', 'Security awareness and phishing simulation exercises.')">
-                    <div class="cert-icon">💳</div>
-                    <div>
-                        <div class="cert-name">Mastercard Sim</div>
-                        <div class="cert-issuer">Forage</div>
-                    </div>
-                    <div class="cert-status">COMPLETED</div>
-                </div>
-
-                <div class="cert-card" onclick="openCert('Core Python', 'Course Completion', 'Foundational Python programming for scripting and automation.')">
-                    <div class="cert-icon">🐍</div>
-                    <div>
-                        <div class="cert-name">Core Python</div>
-                        <div class="cert-issuer">Course</div>
-                    </div>
-                    <div class="cert-status">VERIFIED</div>
-                </div>
-
-                <!-- Duplicate Set for Infinite Scroll -->
-                <div class="cert-card" onclick="openCert('CEH V13ai Certified', 'EC-Council', 'Certified Ethical Hacker. Advanced penetration testing and ethical hacking methodologies.')">
-                    <div class="cert-icon">🔐</div>
-                    <div>
-                        <div class="cert-name">CEH V13ai</div>
-                        <div class="cert-issuer">EC-Council</div>
-                    </div>
-                    <div class="cert-status">VERIFIED</div>
-                </div>
-                <div class="cert-card" onclick="openCert('CHFI Investigator', 'Pursuing', 'Computer Hacking Forensic Investigator. Deep dive into forensic tools and evidence handling.')">
-                    <div class="cert-icon">🕵️‍♀️</div>
-                    <div>
-                        <div class="cert-name">CHFI</div>
-                        <div class="cert-issuer">Pursuing</div>
-                    </div>
-                    <div class="cert-status" style="color:var(--terminal-amber)">IN PROGRESS</div>
-                </div>
-                <div class="cert-card" onclick="openCert('Cyber Job Sim', 'Deloitte Australia', 'Completed practical simulation tasks involving malware analysis and threat assessment.')">
-                    <div class="cert-icon">💼</div>
-                    <div>
-                        <div class="cert-name">Deloitte Cyber Sim</div>
-                        <div class="cert-issuer">Forage</div>
-                    </div>
-                    <div class="cert-status">COMPLETED</div>
-                </div>
+                <div class="cert-status">COMPLETED</div>
             </div>
+
+            <!-- 2. Cyber Security Centre of Excellence -->
+            <div class="cert-card" onclick="openCert('Cyber Security Centre Certificate', 'Dept. of IT & Electronics, West Bengal', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="Certificate from Cyber Security Centre of Exellence Deprtment of Information Technology & Electronics Government of West Bengal.jpg" alt="Cyber Security Centre Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">Cyber Security Centre</div>
+                    <div class="cert-issuer">Govt. of West Bengal</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 3. Core Python -->
+            <div class="cert-card" onclick="openCert('Core Python', 'Course Completion', 'Foundational Python programming for scripting and automation.')">
+                <div class="cert-icon">
+                    <img src="Completion of Core Python Course.jpg" alt="Core Python Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">Core Python</div>
+                    <div class="cert-issuer">Course</div>
+                </div>
+                <div class="cert-status">VERIFIED</div>
+            </div>
+
+            <!-- 4. CPPS -->
+            <div class="cert-card" onclick="openCert('CPPS', 'Organization Name', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="CPPS Certificate.jpg" alt="CPPS Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CPPS</div>
+                    <div class="cert-issuer">Organization Name</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 5. CRTOM -->
+            <div class="cert-card" onclick="openCert('CRTOM', 'Organization Name', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="CRTOM certificate.jpg" alt="CRTOM Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CRTOM</div>
+                    <div class="cert-issuer">Organization Name</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 6. CTF Infocom Hackstar 2023 -->
+            <div class="cert-card" onclick="openCert('CTF Infocom Hackstar 2023', 'ABP', 'Participated in Capture The Flag cybersecurity competition.')">
+                <div class="cert-icon">
+                    <img src="CTF Participation of Infocom Hackstar by ABP (2023).jpeg" alt="CTF 2023 Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF Hackstar 2023</div>
+                    <div class="cert-issuer">ABP</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 7. CTF Infocom Hackstar 2024 -->
+            <div class="cert-card" onclick="openCert('CTF Infocom Hackstar 2024', 'ABP', 'Participated in Capture The Flag cybersecurity competition.')">
+                <div class="cert-icon">
+                    <img src="CTF Participation of Infocom Hackstar by ABP (2024).jpg" alt="CTF 2024 Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF Hackstar 2024</div>
+                    <div class="cert-issuer">ABP</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 8. CTIGA -->
+            <div class="cert-card" onclick="openCert('CTIGA', 'Organization Name', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="CTIGA.jpg" alt="CTIGA Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTIGA</div>
+                    <div class="cert-issuer">Organization Name</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 9. Cryptoquest -->
+            <div class="cert-card" onclick="openCert('Cryptoquest Participation', 'Organization Name', 'Description about this certificate.')">
+                <div class="cert-icon">
+                    <img src="Participation in Cryptoquest.jpg" alt="Cryptoquest Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">Cryptoquest</div>
+                    <div class="cert-issuer">Organization Name</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 10. CTF Cyraksha Hackathon 1 -->
+            <div class="cert-card" onclick="openCert('CTF Cyraksha Hackathon 1', 'The Cyber Club of Kolkata', 'Participated in Capture The Flag hackathon.')">
+                <div class="cert-icon">
+                    <img src="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1].jif" alt="CTF Hackathon 1 Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF Cyraksha Hackathon 1</div>
+                    <div class="cert-issuer">Cyraksha</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 11. CTF Cyraksha Hackathon 2 -->
+            <div class="cert-card" onclick="openCert('CTF Cyraksha Hackathon 2', 'The Cyber Club of Kolkata', 'Participated in Capture The Flag hackathon.')">
+                <div class="cert-icon">
+                    <img src="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 2].jpg" alt="CTF Hackathon 2 Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF Cyraksha Hackathon 2</div>
+                    <div class="cert-issuer">Cyraksha</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 12. CTF by University MAKAUT -->
+            <div class="cert-card" onclick="openCert('CTF University MAKAUT', 'MAKAUT', 'Participated in CTF organized by the university.')">
+                <div class="cert-icon">
+                    <img src="Participation in CTF Organised by Our University Maulana Abul Kalam Azad University OF Technology (MAKAUT), West Bengal.jpg" alt="CTF MAKAUT Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF MAKAUT</div>
+                    <div class="cert-issuer">MAKAUT</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
+            <!-- 13. CTF Workshop by Cyraksha -->
+            <div class="cert-card" onclick="openCert('CTF Workshop Cyraksha', 'The Cyber Club of Kolkata', 'Participated in CTF Workshop.')">
+                <div class="cert-icon">
+                    <img src="Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata).jpg" alt="CTF Workshop Certificate" style="width:40px;height:40px;object-fit:cover;">
+                </div>
+                <div>
+                    <div class="cert-name">CTF Workshop Cyraksha</div>
+                    <div class="cert-issuer">Cyraksha</div>
+                </div>
+                <div class="cert-status">COMPLETED</div>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
+
+
+
 
     <section class="hidden">
         <h2 class="section-title hyper-text">TIMELINE</h2>
@@ -1028,4 +1117,5 @@
 </body>
 
 </html>
+
 
