--- a/index.html
+++ b/index.html
@@ -797,26 +797,60 @@
         </div>
     </section>
 
-    <section id="contact" class="hidden">
-        <h2 class="section-title hyper-text">SECURE UPLINK</h2>
-        <div class="contact-box">
-            <p>Initiate handshake protocol. Open to internships and collaborative investigations.</p>
-            <div class="contact-links">
-                <a href="mailto:sayanimaity78@gmail.com" class="contact-btn">
-                    <span>✉</span> EMAIL
-                </a>
-                <a href="https://linkedin.com/in/sayanimaity" target="_blank" class="contact-btn">
-                    <span>in</span> LINKEDIN
-                </a>
-                <a href="#" class="contact-btn">
-                    <span>✆</span> +91-9339515808
-                </a>
-                <a href="#" class="contact-btn">
-                    <span>git</span> GITHUB
-                </a>
-            </div>
+   <section id="contact" class="hidden">
+    <h2 class="section-title hyper-text">SECURE UPLINK</h2>
+
+    <!-- Resume Download -->
+    <div class="resume-download">
+        <a href="resume.pdf" download class="contact-btn">
+            <span>⬇</span> DOWNLOAD RESUME
+        </a>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="contact-box">
+        <p>Initiate handshake protocol. Open to internships and collaborative investigations.</p>
+
+        <!-- Email -->
+        <a href="mailto:sayanimaity78@gmail.com" class="contact-btn">
+            <span>✉</span> sayanimaity78@gmail.com
+        </a>
+
+        <!-- Social Links -->
+        <div class="contact-links">
+            <a href="https://linkedin.com/in/sayanimaity" target="_blank" class="contact-btn">
+                <span>in</span> LINKEDIN
+            </a>
+            <a href="https://github.com/sayanimaity" target="_blank" class="contact-btn">
+                <span>git</span> GITHUB
+            </a>
+            <a href="https://medium.com/@sayanimaity" target="_blank" class="contact-btn">
+                <span>m</span> MEDIUM
+            </a>
+            <a href="https://twitter.com/sayanimaity" target="_blank" class="contact-btn">
+                <span>t</span> TWITTER
+            </a>
+            <a href="https://facebook.com/sayanimaity" target="_blank" class="contact-btn">
+                <span>f</span> FACEBOOK
+            </a>
+            <a href="https://discord.com/users/yourdiscordid" target="_blank" class="contact-btn">
+                <span>d</span> DISCORD
+            </a>
+            <a href="https://t.me/sayanimaity" target="_blank" class="contact-btn">
+                <span>tg</span> TELEGRAM
+            </a>
         </div>
-    </section>
+    </div>
+
+    <!-- Contact Form -->
+    <form id="contact-form" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit" class="contact-btn">Send Message</button>
+    </form>
+</section>
+
 
     <footer>
         <p>SYSTEM STATUS: OPTIMAL | © 2026 SAYANI MAITY | DESIGNED BY AI</p>
@@ -1117,5 +1151,6 @@
 </body>
 
 </html>
+
 
 
