--- a/index.html
+++ b/index.html
@@ -801,32 +801,32 @@
     <h2 class="section-title hyper-text">SECURE UPLINK</h2>
 
     <!-- Resume Download -->
-    <div class="resume-download" style="margin-bottom: 20px;">
-        <a href="resume.pdf" download class="contact-btn">
-            ⬇ DOWNLOAD RESUME
-        </a>
-    </div>
+<div class="resume-download" style="margin:40px auto; text-align:center;">
+    <a href="resume.pdf" download 
+       style="padding:15px 30px; background: #00ff66; color:#121212; font-weight:bold; text-decoration:none; border-radius:12px; box-shadow: 0 0 15px #00ff66, 0 0 30px #00ff66, 0 0 45px #00ff66; transition:0.3s;">
+       ⬇ DOWNLOAD RESUME
+    </a>
+</div>
 
-    <section id="contact" style="display:flex; justify-content:center; align-items:center; min-height:100vh; background-color:#121212; color:#fff;">
+<section id="contact" style="display:flex; justify-content:center; align-items:center; min-height:100vh; background-color:#121212; color:#fff;">
     <div style="width:100%; max-width:600px; padding:30px; background-color:#1e1e1e; border-radius:15px; box-shadow:0 4px 20px rgba(0,0,0,0.5); text-align:center;">
 
-        <!-- Resume Download -->
-        <div style="margin-bottom:20px;">
-            <a href="resume.pdf" download 
-               style="display:inline-block; padding:10px 15px; background-color:#333; color:#fff; border-radius:8px; text-decoration:none; font-weight:bold; font-size:14px;">
-                ⬇ Download Resume
-            </a>
-        </div>
+        <!-- Contact Heading -->
+        <h2 style="color:#fff; font-weight:bold; margin-bottom:20px;">Contact</h2>
 
-        <!-- Contact Info -->
-        <p style="font-weight:bold; font-size:16px; margin-bottom:20px;">
-            Initiate handshake protocol. Open to internships and collaborative investigations.
+        <!-- Contact Description -->
+        <p style="font-size:16px; margin-bottom:10px;">
+            Initiate handshake protocol. Ready to deploy remotely or on-site collaborative investigations.
+        </p>
+
+        <!-- Email Display -->
+        <p style="font-size:16px; margin-bottom:20px; color:#00ff66; font-weight:bold;">
+            sayanimaity78@gmail.com
         </p>
 
         <!-- Social Links -->
         <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-bottom:25px;">
-            <a href="mailto:sayanimaity78@gmail.com" class="contact-btn" style="padding:8px 12px; background:#333; border-radius:6px; text-decoration:none; color:#fff;">✉ Email</a>
-            <a href="https://linkedin.com/in/sayanimaity" target="_blank" style="padding:8px 12px; background:#0077b5; border-radius:6px; text-decoration:none; color:#fff;">in LinkedIn</a>
+            <a href="https://linkedin.com/in/sayanimaity" target="_blank" style="padding:8px 12px; background:#0077b5; border-radius:6px; text-decoration:none; color:#fff;">LinkedIn</a>
             <a href="https://github.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#24292f; border-radius:6px; text-decoration:none; color:#fff;">GitHub</a>
             <a href="https://medium.com/@sayanimaity" target="_blank" style="padding:8px 12px; background:#000000; border-radius:6px; text-decoration:none; color:#fff;">Medium</a>
             <a href="https://twitter.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#1DA1F2; border-radius:6px; text-decoration:none; color:#fff;">Twitter</a>
@@ -1145,6 +1145,7 @@
 </body>
 
 </html>
+
 
 
 
