Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -800,13 +800,14 @@
   <section id="contact" class="hidden">
     <h2 class="section-title hyper-text">SECURE UPLINK</h2>
 
-    <!-- Resume Download -->
+   <!-- Resume Download -->
 <div class="resume-download" style="margin:40px auto; text-align:center;">
     <a href="resume.pdf" download 
-       style="padding:15px 30px; background: #00ff66; color:#121212; font-weight:bold; text-decoration:none; border-radius:12px; box-shadow: 0 0 15px #00ff66, 0 0 30px #00ff66, 0 0 45px #00ff66; transition:0.3s;">
+       style="padding:15px 30px; background: #00cc44; color:#fff; font-weight:bold; text-decoration:none; border-radius:12px; display:inline-block; transition:0.3s;">
        ⬇ DOWNLOAD RESUME
     </a>
 </div>
+
 
 <section id="contact" style="display:flex; justify-content:center; align-items:center; min-height:100vh; background-color:#121212; color:#fff;">
     <div style="width:100%; max-width:600px; padding:30px; background-color:#1e1e1e; border-radius:15px; box-shadow:0 4px 20px rgba(0,0,0,0.5); text-align:center;">
@@ -1145,6 +1146,7 @@
 </body>
 
 </html>
+
 
 
 
