--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     </div>
 
     <nav>
-        <div class="logo">&lt;SM_SEC /&gt;</div>
+        <div class="logo">&lt;isayani-78 /&gt;</div>
         <div class="nav-links">
             <a href="#about" class="nav-link">FILE: PROFILE</a>
             <a href="#skills" class="nav-link">ARSENAL</a>
@@ -393,7 +393,7 @@
             <div class="hero-avatar-glow"></div>
             <div class="hero-avatar-ring"></div>
             <div class="hero-scan-line"></div>
-            <img src="https://ui-avatars.com/api/?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33" alt="Sayani Maity" class="hero-img">
+            <img src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/sayanipfp%201.jpg?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33" alt="Sayani Maity" class="hero-img">
         </div>
         <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
         <div class="glitch-wrapper">
@@ -1146,6 +1146,7 @@
 </body>
 
 </html>
+
 
 
 
