--- a/index.html
+++ b/index.html
@@ -388,13 +388,19 @@
         </div>
     </nav>
 
-    <header class="hero">
-        <div class="hero-avatar-container">
-            <div class="hero-avatar-glow"></div>
-            <div class="hero-avatar-ring"></div>
-            <div class="hero-scan-line"></div>
-            <img src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/sayanipfp%201.jpg?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33" alt="Sayani Maity" class="hero-img">
-        </div>
+   <header class="hero">
+    <div class="hero-avatar-container">
+        <div class="hero-avatar-glow"></div>
+        <div class="hero-avatar-ring"></div>
+        <div class="hero-scan-line"></div>
+
+        <img 
+          src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/sayanipfp%201.jpg" 
+          alt="Sayani Maity" 
+          class="hero-img">
+    </div>
+</header>
+
         <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
         <div class="glitch-wrapper">
             <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
@@ -1146,6 +1152,7 @@
 </body>
 
 </html>
+
 
 
 
