--- a/index.html
+++ b/index.html
@@ -385,11 +385,17 @@
             <a href="#projects" class="nav-link">CASES</a>
             <a href="#credentials" class="nav-link">CREDENTIALS</a> <!-- NEW LINK -->
             <a href="#contact" class="nav-link">UPLINK</a>
-        </div>
-    </nav>
-
-   <header class="hero"> <div class="hero-avatar-container"> <div class="hero-avatar-glow"></div> <div class="hero-avatar-ring"></div> <div class="hero-scan-line"></div> <img src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/sayanipfp%201.jpg?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33" alt="Sayani Maity" class="hero-img"> </div>
-
+        <header class="hero">
+    <div class="hero-avatar-container">
+        <div class="hero-avatar-glow"></div>
+        <div class="hero-avatar-ring"></div>
+        <div class="hero-scan-line"></div>
+        <img
+            src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/sayanipfp%201.jpg?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33"
+            alt="Sayani Maity"
+            class="hero-img">
+    </div>
+</header>
 
         <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
         <div class="glitch-wrapper">
@@ -1142,6 +1148,7 @@
 </body>
 
 </html>
+
 
 
 
