--- a/index.html
+++ b/index.html
@@ -377,25 +377,19 @@
         </div>
     </div>
 
-    <nav>
-        <div class="logo">&lt;isayani-78 /&gt;</div>
-        <div class="nav-links">
-            <a href="#about" class="nav-link">FILE: PROFILE</a>
-            <a href="#skills" class="nav-link">ARSENAL</a>
-            <a href="#projects" class="nav-link">CASES</a>
-            <a href="#credentials" class="nav-link">CREDENTIALS</a> <!-- NEW LINK -->
-            <a href="#contact" class="nav-link">UPLINK</a>
-        <header class="hero">
+    <header class="hero">
     <div class="hero-avatar-container">
         <div class="hero-avatar-glow"></div>
         <div class="hero-avatar-ring"></div>
         <div class="hero-scan-line"></div>
-        <img
-            src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/sayanipfp%201.jpg?name=Sayani+Maity&background=0D0D0D&color=00ffcc&size=512&font-size=0.33"
-            alt="Sayani Maity"
-            class="hero-img">
+
+        <img 
+          src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/sayanipfp%201.jpg" 
+          alt="Sayani Maity" 
+          class="hero-img">
     </div>
 </header>
+
 
         <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
         <div class="glitch-wrapper">
@@ -403,7 +397,7 @@
         </div>
         <p>Digital Forensics Analyst | CEH V13ai Certified | Cyber Sleuth</p>
         <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
-    </header>
+   
 
     <section id="about" class="hidden">
         <h2 class="section-title hyper-text">FILE: PROFILE</h2>
@@ -1148,6 +1142,7 @@
 </body>
 
 </html>
+
 
 
 
